rpm-ostree: Local package not recognized as installed
When an already installed (layered) local rpm package is opened using GNOME Software on Fedora Silverblue, it always shows "Install" instead of the correct "Remove" option. Clicking the "Install" button again returns an error that the package is already installed.
This issue was already reported as #965 (closed) and resolved on regular PackageKit-based systems, but remains unfixed on Silverblue.
Steps to reproduce:
- Open and layer any local rpm file using GNOME Software on Fedora Silverblue.
- Reboot the computer.
- Open the local package file again in GNOME Software.
It happens on Fedora 32 Silverblue with GNOME Software 3.36.0.
(In most cases, it is not possible at all to remove such packages using GNOME Software because they don't show on the Installed tab if they have no AppStream metadata which is considered to be an expected behaviour, see #966 (closed).)