rpm-ostree: Local package not recognized as installed

Refine the application instance also when generating it from a local
.rpm file, thus it is recognized as installed, when being installed.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/991